--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.3.0"
   }
 }
