--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1"
   }
